# licorice-engine

./: .gitignore  CMakeLists.txt  README.md
build_game/: CMakeCache.txt  Executable  Makefile  cmake_install.cmake  imgui.ini
example/: CMakeLists.txt  Game.cpp  Game.hpp  LicoriceEngineJsonHelper.cpp  Player.cpp  Player.hpp  README.txt  SimpleMap.cpp  editor_map.json  game_map.json  main.cpp
example/game/: Game.cpp  Game.hpp  Player.cpp
example/res/: editor_map.json
example/src/: Game.cpp  Game.hpp  LicoriceEngineJsonHelper.cpp  Math.cpp  Player.hpp  Rigidbody.cpp  Rigidbody.hpp  main.cpp
examples/: SimpleMap.cpp
include/LicoriceEngine/: Camera.hpp  Camera.ini  Color.hpp  Color.ini  Hittable.hpp  LightSource.hpp  System.hpp  System.ini  World.hpp
map_editor/: main.cpp  map_editor.cpp  map_editor.hpp
src/LicoriceEngine/: Camera.cpp  LightSource.cpp  World.cpp
tools/map_editor/: CMakeLists.txt  map_editor.cpp  map_editor.hpp
